g_object_get() returns a new ref, so we need to unref the conn before returning (https://bugs.freedesktop.org/show_bug.cgi?id=9434)

20070115125428-945a0-c2b564e2b52a578bc9fdc5ac340ea3df8d106a50.gz